# APL

./: .gitignore  Kill.bat  README.md  Setup.bat  Start.bat
development/: README.md  STATUS.md  app.py  pyproject.toml
development/src/development/: __init__.py  _json_utils.py  activity.py  config.py  discovery.py  llm_client.py  messageboard.py  orchestrator.py  reasoning_panel.py  server.py  types.py
development/src/development/integrations/: __init__.py  prompt_enhancer.py  round_robin.py
development/src/development/layers/: __init__.py  _common.py  backend.py  database.py  deployment.py  frontend.py
development/src/development/reviewers/: __init__.py  round_robin.py
development/src/development/stages/: __init__.py  _packager_validator.py  _runner.py  _workspace.py  architect.py  base.py  coder.py  packager.py  reviewer.py  tester.py
development/src/development/static/: index.html
development/src/development/templates/: __init__.py  _builtin_fastapi_sqlite.py  _eps.py  base.py
development/src/development/tools/: __init__.py  exec.py  filesystem.py  git.py
development/src/development/workspace/: __init__.py
development/tests/: conftest.py  test_activity_endpoint.py  test_architect_stage.py  test_coder_stage.py  test_coder_tool_use.py  test_discovery.py  test_endpoints.py  test_integration_lmstudio.py  test_layer_generators.py  test_messageboard.py  test_orchestrator.py  test_packager_stage.py  test_panel_wiring_all_stages.py  test_reasoning_panel_wiring.py  test_reviewer_stage.py  test_round_robin_reviewer.py  test_sse_events.py  test_stack_templates.py  test_static_ui.py  test_tester_stage.py  test_tools.py
docs/: ARCHITECTURE_VISION.md  DEVELOPMENT_FRAMEWORK.md
lab/: README.md  launch.py  onboarding.py
prompt-enhancer/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STATUS.md  Start.bat  Stop.bat  livetest.py  pyproject.toml
prompt-enhancer/.claude/: settings.local.json
prompt-enhancer/docs/: ARCHITECTURE.md  EVENTS.md  EXTRACTION_GOTCHAS.md  INTEGRATION.md  MIGRATION.md  PIPELINE_GRAPH.md  PLUGINS.md  PROVIDERS.md  REASONING_PANEL.md  SERVICES.md  UI_TESTING.md
prompt-enhancer/examples/: panel_smoke.py
prompt-enhancer/packaging/: entrypoint.py  installer.iss  prompt-enhancer.spec
prompt-enhancer/src/enhancer/: __init__.py  config.py
prompt-enhancer/src/enhancer/api/: __init__.py  activity.py  discovery.py  rest.py
prompt-enhancer/src/enhancer/cli/: __init__.py  _services.py  extras.py  main.py
prompt-enhancer/src/enhancer/core/: __init__.py  budgeting.py  events.py  parsing.py  passes.py  pipeline.py  pipeline_graph.py  transforms.py
prompt-enhancer/src/enhancer/llm/: __init__.py  anthropic.py  base.py  host_picker.py  lms_discovery.py  lms_link.py  lmstudio.py  model_router.py  ollama.py  openai.py  panel_config.py  reasoning_panel.py  registry.py  resilience.py
prompt-enhancer/src/enhancer/mcp/: __init__.py  client.py  invoker.py  registry.py  types.py
prompt-enhancer/src/enhancer/observability/: __init__.py
prompt-enhancer/src/enhancer/persistence/: __init__.py  db.py  jsonl_compat.py  runs.py  safestorage.py  schema.sql  sessions.py
prompt-enhancer/src/enhancer/ui/: __init__.py  app.py
prompt-enhancer/src/enhancer/ui/components/: activity_panel.py  branch_tree.py  diff_view.py  pass_card.py  round_robin_handoff.py  score_chips.py  session_drawer.py  status_strip.py
prompt-enhancer/src/enhancer/ui/pages/: analytics.py  compare.py  history.py  settings.py  studio.py  templates.py
prompt-enhancer/tests/: conftest.py  test_activity_endpoint.py  test_api_rest.py  test_branching.py  test_cli_auto_resume.py  test_cli_services.py  test_concurrency.py  test_config_toml.py  test_disambiguation.py  test_discovery.py  test_events.py  test_integration_panel_lmstudio.py  test_lab_launch.py  test_lms_discovery.py  test_lms_host_picker_wiring.py  test_mcp.py  test_migration.py  test_model_router.py  test_parsing.py  test_pipeline_graph.py  test_pipeline_panel.py  test_pipeline_persona_partner.py  test_pipeline_smoke.py  test_pipeline_v201.py  test_providers.py  test_reasoning_panel.py  test_registry.py  test_resilience.py  test_round_robin_handoff.py  test_settings_reasoning_panel.py  test_studio_activity_panel.py  test_ui_components.py  test_ui_pages.py  test_umbrella_smoke.py
prompt-enhancer/tools/: methodology_agent.py  migrate_jsonl_to_sqlite.py
round-robin/: CLAUDE.md  README.md  SESSION_LOG.md  Start.bat  TRACK_RECORD.md  app.py  pyproject.toml
round-robin/src/round_robin/: __init__.py  __main__.py  activity.py  code_review.py  config.py  discovery.py  health.py  intel.py  lm_client.py  lms_cli.py  monitoring.py  orchestrator.py  reasoning_panel.py  server.py  sessions.py  storage.py  user_config.py
round-robin/src/round_robin/charlie/: __init__.py  agent.py  workspace.py
round-robin/src/round_robin/static/: app.css  app.js  index.html
round-robin/tests/: test_activity_endpoint.py  test_charlie_summary.py  test_charlie_workspace.py  test_code_review.py  test_discovery.py  test_endpoints.py  test_health.py  test_intel.py  test_lm_client.py  test_lms_cli.py  test_monitoring.py  test_orchestrator.py  test_persona_handoff.py  test_reasoning_panel_integration.py  test_server_routes.py  test_storage.py  test_user_config.py
