[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "development"
version = "0.1.0"
description = "Local LLM-driven app builder — orchestrates Architect/Coder/Reviewer/Tester/Packager stages over LM Studio."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Halkive" }]
keywords = ["llm", "lmstudio", "code-generation", "agent", "orchestrator"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "structlog>=24.1",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
development = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
