[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-enhancer"
version = "0.1.0"
description = "Local Desktop Studio for multi-pass AI prompt enhancement (LM Studio first, providers pluggable)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Halkive" }]
keywords = ["prompt-engineering", "llm", "lmstudio", "ollama", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "platformdirs>=4.2",
    "pyperclip>=1.8",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
ui = [
    "nicegui>=2.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]
ollama  = []  # ollama uses httpx; placeholder for clarity
openai  = ["openai>=1.30"]
anthropic = ["anthropic>=0.34"]
all = ["prompt-enhancer[ui,openai,anthropic]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "playwright>=1.45",
    "pyinstaller>=6.0",
]

[project.scripts]
enhancer = "enhancer.cli.main:app"

[project.urls]
Homepage = "https://github.com/halkive/prompt-enhancer"
Issues = "https://github.com/halkive/prompt-enhancer/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"enhancer.persistence" = ["schema.sql"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
ignore = ["E501"]  # handled by black

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = false  # gradual typing
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
    "concurrency: regression guards for the three concurrency invariants",
    "slow: tests that hit a real LM backend",
]
